feat: plataforma web
